# DumpSync

./: .env-example  .env.app  .gitignore  404.html  CNAME  Cargo.toml  README.md  dumpsync.json  dumpsync.yml  dumpsync1.yml  index.html  mkdocs.yml  patterns.txt
.github/: FUNDING.yml
.github/workflows/: publish.yml  rust.yml  static.yml  vercel.yml
checksum/: index.html
connection/: index.html
docs/: checksum.md  connection.md  dumpdata.md  export.md  history.md  import.md  importdata.md  index.md  init.md  install.md  pull.md  scan.md  schema.md  settings.md  share.md  skip-syntax.md  transfer.md  truncate.md  visual.md  writing-patterns.md
export/: index.html
import/: index.html
init/: index.html
install/: index.html
scan/: index.html
schema/: index.html
search/: search_index.json
settings/: index.html
share/: index.html
src/: addons.rs  args_cli.rs  dump_sync.rs  dumper.rs  dumpsync.rs  init.rs  main.rs  service.rs
src/cloud/: api.rs  login.rs  mod.rs  pull.rs  push.rs
src/cmd/: connection.rs  entropy.rs  mod.rs  runner.rs
src/constants/: addons.rs  api_init.rs  folders.rs  global.rs  mod.rs  protocols.rs  regexp.rs  tables.rs  urls.rs
src/constants/api/: api_endpoints.rs  api_init.rs  api_names.rs  api_token.rs  mod.rs
src/consts/: global.rs  mod.rs
src/core/: connection.rs  dump.rs  dump_data.rs  encrypt.rs  export.rs  import.rs  import_data.rs  mod.rs  runner.rs  transfer.rs  truncate.rs
src/engine/: configs.rs  connection.rs  dump.rs  env.rs  export.rs  import.rs  mod.rs  scan_xss.rs  transfer.rs
src/handlers/: comments_headers.rs  diagram_handlers.rs  dump_handlers.rs  export_handlers.rs  html_handlers.rs  import_handlers.rs  mod.rs  mysql_queries_builders.rs  queries_builders.rs  reports_handlers.rs  scan_handlers.rs  syntax_skip.rs  syntax_skip_handlers.rs
src/handlers/mysql/: export_handlers.rs  mod.rs  mysql_export_handlers.rs  mysql_keywords.rs  mysql_queries_builders.rs  scan_handlers.rs
src/handlers/sqlite/: mod.rs  tables.rs  tables_names.rs
src/helpers/: configs.rs  configs_files.rs  dump_handlers.rs  env.rs  export_handlers.rs  history.rs  import_handlers.rs  mod.rs  queries_builders.rs  reports_handlers.rs  scan_handlers.rs  system_env.rs  transfer_handlers.rs  write_env.rs
src/plugins/: checksum.rs  diagram.rs  history_logs.rs  mod.rs  pastebin.rs  reports.rs  reports_pdf.rs  reports_xss.rs  scan_xss.rs  schema.rs  share.rs
src/sql_queries/: mod.rs  mysql_queries_builders.rs
src/ui/: checksum_alerts.rs  errors_alerts.rs  mod.rs  normal_alerts.rs  reconnect_alerts.rs  report_alerts.rs  report_xss_alerts.rs  scan_alerts.rs  schema_alerts.rs  share_alerts.rs  success_alerts.rs  ui_base.rs
src/utils/: converter.rs  converters.rs  date.rs  file.rs  generate.rs  mod.rs  open.rs
transfer/: index.html
writing-patterns/: index.html
