[package]
name = "dumpsync"
version = "0.1.22"
edition = "2021"
license = "MIT"
authors = ["kremilly"]
categories = ["command-line-utilities", "database", "dev-tools"]
keywords = ["mysql", "dump", "restore", "backup", "database"]
description = "DumpSync is a lightweight tool designed for efficiently dumping and restoring MySQL databases. Whether you need to create backups, restore databases, or transfer data between servers."
repository = "https://github.com/kremilly/DumpSync"
documentation = "https://docs.dumpsync.com/"
homepage = "https://dumpsync.com"

[dependencies]
aes-gcm = "0.10.3"
chrono = "0.4.39"
clap = { version = "4.5.21", features = ["cargo", "derive"] }
clap-cargo = "0.14.1"
colored = "2.2.0"
crc32fast = "1.4.2"
csv = "1.3.1"
ctrlc = "3.4.5"
dotenvy = "0.15.7"
figlet-rs = "0.1.5"
flate2 = "1.0.35"
md-5 = "0.10.6"
mysql = "25.0.1"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
rpassword = "7.3.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
sha1 = "0.10.6"
sha2 = "0.10.8"
tokio = { version = "1.41.1", features = ["full"] }

[profile.release]
lto = true
