[package]
name = "dumpsync"
version = "0.1.36"
edition = "2021"
license = "MIT"
authors = ["kremilly"]
categories = ["command-line-utilities", "database"]
keywords = ["mysql", "dump", "restore", "backup", "database"]
description = "DumpSync is a lightweight tool designed for efficiently dumping and restoring MySQL databases. Whether you need to create backups, restore databases, or transfer data between servers."
repository = "https://github.com/YeDawa/DumpSync"
documentation = "https://docs.dumpsync.com/"
homepage = "https://dumpsync.com"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["cargo", "derive"] }
clap-cargo = "0.18.1"
colored = "3.0.0"
crc32fast = "1.4.2"
csv = "1.4.0"
ctrlc = "3.5.0"
dirs-next = "2.0.0"
dotenvy = "0.15.7"
figlet-rs = "0.1.5"
flate2 = "1.1.4"
md-5 = "0.10.6"
mysql = "26.0.1"
once_cell = "1.21.3"
open = "5.3.2"
printpdf = "0.7.0"
rand = "0.9.1"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking", "json", "multipart"] }
rpassword = "7.4.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha1 = "0.10.6"
sha2 = "0.10.9"
tokio = { version = "1.45.0", features = ["full"] }

[profile.release]
lto = true
